--- a/INFORME/informe.tex
+++ b/INFORME/informe.tex
@@ -178,6 +178,9 @@
 \include{cap_4}
 
 \include{cap_5}
+
+\include{Ayudantia_2}
+
 \newpage
 \bibliography{referencias}  % Nombre del archivo .bib
 
