avance y mergeo cap 4

--- a/INFORME/informe.tex
+++ b/INFORME/informe.tex
@@ -90,7 +90,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{\raisebox{0.20cm}{\textbf{Métodos Computacionales en Obras Civiles}}}
+\fancyhead[L]{\raisebox{0.20cm}{\textbf{Apuntes Prueba 1 Hidrologia}}}
 \fancyhead[R]{\raisebox{0.1cm}{\includegraphics[width=0.25\linewidth]{LOGO_UNIVERSIDAD.jpg}}}
 \fancyhead[C]{\rule{\textwidth}{0.6pt}}
 \fancyfoot[C]{\rule{\textwidth}{0.6pt}}
@@ -125,21 +125,16 @@
 %	SECCION DEL TITULO
 %----------------------------------------------------------------------------------------
 \HRule \\[0.4cm]
-{ \huge \bfseries Entrega 0, Proyecto 1}\\[0.4cm] % Titulo del documento
-{ \huge \bfseries Metodos Computacionales en OOCC, IOC 4201}\\[0.4cm] % Titulo del documento
+{ \huge \bfseries Apuntes Prueba 1}\\[0.4cm] % Titulo del documento
+{ \huge \bfseries Hidrologia}\\[0.4cm] % Titulo del documento
 \HRule \\[1.5cm]
  \vspace{5cm}
 %----------------------------------------------------------------------------------------
 %	SECCION DEL AUTOR
 %----------------------------------------------------------------------------------------
 \begin{flushright}
-    { \textbf{Profesor:}\\
-    Patricio Moreno\\
-    \vspace{0.2cm}
-    \textbf{Ayudante:} \\
-    Maximiliano Biasi\\
-    \vspace{0.2cm}
-    \textbf{Alumno:} \\
+    { 
+    \textbf{Autores:} \\
     Lukas Wolff Casanova\\
 }
 \end{flushright}
@@ -178,6 +173,8 @@
 \include{cap_4}
 
 \include{cap_5}
+
+\include{Ayudantia_1}
 
 \include{Ayudantia_2}
 
