--- a/INFORME/Ayudantia_1.tex
+++ b/INFORME/Ayudantia_1.tex
@@ -26,7 +26,10 @@ Donde:
     \item ET = Evapotranspiracion
     \item Int: Infiltracion
     \item $Q_{SE}$: Caudal Superficial Efluente y caudal subterraneo efluente
+    \item $Q_{ze}$: Caudal subterraneo efluente
 \end{itemize}
+
+\textbf{NOTA si hay una variacion de altura considerarla}
 
 Donde se define como:
 
