--- a/INFORME/Ayudantia_2.tex
+++ b/INFORME/Ayudantia_2.tex
@@ -82,6 +82,14 @@ Se define Gumbell como:
     K_t = \frac{y_t - y_n}{\sigma_n}
 \end{equation}
 
+Usar los siguientes valores:
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\textwidth]{imagenes/tabla_valores_gumbell.jpg}
+    \label{fig:valores}
+\end{figure}
+
 \begin{equation}
     y_t = -\ln(\ln(\frac{T}{T-1}))
 \end{equation}
