--- a/INFORME/cap_4.tex
+++ b/INFORME/cap_4.tex
@@ -69,9 +69,11 @@ Por lo tanto, la probabilidad de que cierto valor no se exceda en n años es:
 
 Lo cual se define como \textbf{Seguridad Hidrologica}, donde su complemento es el \textbf{Riesgo Hidrologico}, lo cual se usa para obras hidraulicas:
 
-\begin{eqnarray}
+\begin{equation}
     R = 1- S = 1 - (1 - \frac{1}{T})^n
-\end{eqnarray}
+\end{equation}
+
+\textbf{Nota: aproximar el valor de t a un valor multiplo de 5}
 
 \section{Distribuciones Discretas}
 
