--- a/INFORME/Ayudantia_1.tex
+++ b/INFORME/Ayudantia_1.tex
@@ -29,7 +29,7 @@ Donde:
     \item $Q_{ze}$: Caudal subterraneo efluente
 \end{itemize}
 
-\textbf{NOTA si hay una variacion de altura considerarla}
+\textbf{NOTA si hay una variacion de}
 
 Donde se define como:
 
