--- a/INFORME/Ayudantia_2.tex
+++ b/INFORME/Ayudantia_2.tex
@@ -84,7 +84,7 @@ Se define Gumbell como:
 
 Usar los siguientes valores:
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{imagenes/tabla_valores_gumbell.jpg}
     \label{fig:valores}
