--- a/INFORME/cap_2.tex
+++ b/INFORME/cap_2.tex
@@ -116,9 +116,14 @@ Donde:
         \item Corrige el modelo por la relación entre las medias de los modelos y de los registros observados
     \end{itemize}
     \item Quantile Delta Mapping (QDM)
-    \item 
+    \begin{itemize}
+        \item Preserva los cambios absolutos (utilizados típicamente para temperatura) o relativos en los cuantiles, corrigiendo al mismo tiempo los sesgos en la distribución de frecuencia de la variable simulada, respecto de la referencia
+    \end{itemize}
+    \item Multivariable quantile bias correction (MBC)
 \end{itemize}
 
+\section{Balance hidrológico de un embalse}
+\textbf{revisar ayudantía 1}
 
 
 
