--- a/INFORME/informe.tex
+++ b/INFORME/informe.tex
@@ -154,12 +154,12 @@
 \thispagestyle{empty} % Deshabilita el número de página en la página del índice
 \newpage
 
-\newpage
-\thispagestyle{empty}
-\listoffigures 
-\thispagestyle{plain} % Deshabilita el encabezado en la página del índice %
-\thispagestyle{empty}
-\newpage
+%\newpage
+%\thispagestyle{empty}
+%\listoffigures 
+%\thispagestyle{plain} % Deshabilita el encabezado en la página del índice %
+%\thispagestyle{empty}
+%\newpage
 %----------------------------------------------------------------------------------------
 %ACÁ EMPIEZA EL INFORME
 \setcounter{page}{1}
