--- a/INFORME/cap_5.tex
+++ b/INFORME/cap_5.tex
@@ -155,7 +155,7 @@ Sirve para correlacionar la informacion pluviometrica con la registrada en estac
     \label{correlacion}
 \end{figure}
 
-\subsubsection{Consistencia de las estadisticas pluviometricas \\ Curva doble acumulada (CDA)}
+\subsubsection{Consistencia de las estadisticas pluviometricas - Curva doble acumulada (CDA)}
 
 Este metodo se utiliza para verificar la consistencia de los datos pluviometricos, para esto se grafican las precipitaciones acumuladas en un periodo de tiempo y se comparan con las precipitaciones acumuladas de varias estaciones cercanas.\\
 
