--- a/INFORME/Ayudantia_2.tex
+++ b/INFORME/Ayudantia_2.tex
@@ -123,7 +123,7 @@ Se define como:
 \end{equation}
 
 \begin{equation}
-    K_t = Z + (Z^2 - 1)K + \frac{1}{3}(Z^3 - 6Z)K^2 - (Z^2-1)Z^3 + Z\cdot K^4 + \frac{K^5}{3}
+    K_t = Z + (Z^2 - 1)K + \frac{1}{3}(Z^3 - 6Z)K^2 - (Z^2-1)K^3 + Z\cdot K^4 + \frac{K^5}{3}
 \end{equation}
 
 \begin{equation}
