--- a/INFORME/Ayudantia_2.tex
+++ b/INFORME/Ayudantia_2.tex
@@ -162,7 +162,9 @@ Se define como:
     X_t + - S_e \cdot Z_{\alpha}
 \end{equation}
 
-\textbf{$Z_{\alpha}$} es la variable normal estandar para un nivel de confianza de $\alpha$. Para $\alpha$ = 5 \%, implica que $Z_{\alpha}$ = 1.96. = 1.645. Luego:
+\textbf{$Z_{\alpha}$} es la variable normal estandar para un nivel de confianza de $\alpha$. Para $\alpha$ = 5 \%, implica que $Z_{\alpha}$ = 1.645. 
+\\ \\
+Luego:
 
 \begin{equation}
     S_e = \sigma \cdot \sqrt{(1+1.139K_t + 1.1000K_t^2) \cdot \frac{1}{n}}
